--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -5,7 +5,7 @@ OBJS			= $(SRCS:.c=.o)
 
 CC				= gcc
 RM				= rm -f
-CFLAGS			= -Wall -Wextra -Werror -I.
+CFLAGS			= -Wall -Wextra -Werror -I. -g
 
 NAME			= libftprintf.a
 
